<resources>
    <string name="app_name">Dialer</string>
    <string name="prompt_button_text">What would you like to do?</string>
    <string name="call_list_button_text">CALL LIST</string>
    <string name="settings_button_text">SETTINGS</string>
    <string name="map_button_text">MAP</string>
    <string name="about_button_text">ABOUT</string>
    <string name="dial_button_text">DIAL</string>
    <string name="dial_activity_text">This is the Dial activity</string>
    <string name="call_list_activity_text">This is Call list activity</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->


    <string name="title_activity_maps">MapsActivity</string>
    <string name="about_dialog_text">This app is supposed to mimic the keypad on a phone.
        The app will consist of activities to:\n
        \n\u2022 Enter number to dial
        \n\u2022 See previously dialed numbers
        \n\u2022 Change the keypad settings
        \n\u2022 Show a map where previous calls are dialed from
    </string>
    <string name="ok">OK</string>
    <string name="about_dialog_title">About</string>
    <string name="dial_button_title">0</string>
    <string name="dial_button_message">000</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="number_0">0</string>
    <string name="abc">abc</string>
    <string name="def">def</string>
    <string name="ghi">ghi</string>
    <string name="abc_cap">ABC</string>
    <string name="def_cap">DEF</string>
    <string name="ghi_cap">GHI</string>
    <string name="jkl_cap">JKL</string>
    <string name="mno_cap">MNO</string>
    <string name="pqrs_cap">PQRS</string>
    <string name="tuv_cap">TUV</string>
    <string name="wxyz_cap">WXYZ</string>
    <string name="plus_sign">+</string>
    <string name="star_symbol">*</string>
    <string name="hashtag_symbol">#</string>
    <string name="letter_x">x</string>
    <string name="call_image_desc">call image</string>
    <string name="store_numbers">Store numbers</string>
    <string name="delete_stored_numbers">Delete stored numbers</string>
    <string name="summary_delete_number">Delete stored telephone numbers from storage</string>
    <string name="summary_store_numbers">Dialed telephone numbers are stored so they can be view later</string>
    <string name="delete_number_key">delete_number</string>
    <string name="store_number_key">store_number</string>
    <string name="settings">Settings</string>
    <string name="download_voices">DOWNLOAD VOICES</string>
    <string name="voices_website_url">https://dt031g.programvaruteknik.nu/dialer/voices/</string>
    <string name="voices_storage_location">/&lt;app-specific-storage&gt;/voices/</string>
    <string name="voices_website_url_put_extra_key">voices_website_url</string>
    <string name="voices_storage_location_put_extra_key">voices_storage_location</string>
    <string name="voices_directory">voices</string>
    <string name="downloaded_voices_file">downloadedVoices.zip</string>
    <string name="downloaded_file_prefix">downloadedVoices</string>
    <string name="voices">Voices</string>
    <string name="voices_key">voices_key</string>
    <string name="phone_number">Phone number</string>
    <string name="location">Location</string>
    <string name="call_date">Call date</string>
    <string name="call_location_varable_string">[%1$d, %2$d]</string>
    <string name="empty_call_list_message">The call list is empty.</string>
</resources>