<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DialActivity">

  <se.miun.holi1900.dt031g.dialer.DialButtonView
      android:id="@+id/dial_button_1"
      android:layout_width="@dimen/dial_button_dimen_50dp"
      android:layout_height="@dimen/dial_button_dimen_100dp"
      app:layout_constraintBottom_toTopOf="@+id/dial_button_2"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:message="@string/abc"
      app:title="@string/number_1" />

  <se.miun.holi1900.dt031g.dialer.DialButtonView
      android:id="@+id/dial_button_2"
      android:layout_width="@dimen/dial_button_dimen_200dp"
      android:layout_height="@dimen/dial_button_dimen_200dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.502"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:message="@string/def"
      app:title="@string/number_2" />

  <se.miun.holi1900.dt031g.dialer.DialButtonView
      android:id="@+id/dial_button_3"
      android:layout_width="@dimen/dial_button_dimen_100dp"
      android:layout_height="@dimen/dial_button_dimen_50dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/dial_button_2"
      app:message="@string/ghi"
      app:title="@string/number_3" />

  <se.miun.holi1900.dt031g.dialer.DialButtonView
      android:id="@+id/expanded_dial_button"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:visibility="invisible"/>
</androidx.constraintlayout.widget.ConstraintLayout>